added style to hide or show remove icon on hover

--- a/src/main.css
+++ b/src/main.css
@@ -7,4 +7,15 @@
 
 #main .timezone-container {
   flex: 1;
+  text-align: center;
+}
+
+#main .timezone-container .remove {
+  cursor: pointer;
+  display: none;
+}
+
+#main .timezone-container .timezone-info:hover .remove {
+  cursor: pointer;
+  display: initial;
 }
