--- a/src/main.css
+++ b/src/main.css
@@ -9,6 +9,12 @@ body {
 
 header {
   min-height: var(--headerHeight);
+  display: flex;
+
+  flex-direction: column;
+  flex-wrap: nowrap;
+  align-items: center;
+  justify-content: center;
 }
 
 #main {
