--- a/src/main.css
+++ b/src/main.css
@@ -5,6 +5,7 @@
 
 body {
   margin: 0;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
 header {
@@ -23,12 +24,39 @@ header {
   flex-direction: row;
   flex-wrap: nowrap;
   min-height: var(--mainHeight);
-  align-items: center;
 }
 
 #main .timezone-container {
   flex: 1;
   text-align: center;
+  margin-top: calc(var(--mainHeight) * 0.25);
+}
+
+#main .timezone-container h1 {
+  font-size: 5rem;
+  margin: 0px;
+  padding: 0px;
+}
+
+#main .timezone-container h2 {
+  font-size: 3rem;
+  margin: 0px;
+  padding: 0px;
+}
+
+#main .timezone-container .timezone-wrapper {
+  margin: 10px;
+  transition: background-color 300ms cubic-bezier(0.55, 0.055, 0.675, 0.19),
+    box-shadow 300ms cubic-bezier(0.55, 0.055, 0.675, 0.19);
+  border-radius: 5px;
+  padding-bottom: 5rem; /* this is a hack because I can't override the margin on the wc-blink */
+}
+
+#main .timezone-container .timezone-wrapper:hover {
+  background: #bada55;
+  box-shadow: 7px 7px 5px 0px #bfbfbf;
+  transition: background-color 300ms cubic-bezier(0.55, 0.055, 0.675, 0.19),
+    box-shadow 300ms cubic-bezier(0.55, 0.055, 0.675, 0.19);
 }
 
 #main .timezone-container .remove {
